<resources>
    <string name="app_name">Base System Calculator</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="hex">HEX</string>
    <string name="dec">DEC</string>
    <string name="bin">BIN</string>
    <string name="oct">OCT</string>
    <string name="h">H</string>
    <string name="o">O</string>
    <string name="ac">AC</string>
    <string name="equals">=</string>
</resources>